Minimal working version

--- a/nbs/metaflow.ipynb
+++ b/nbs/metaflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,19 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export \n",
+    "# export\n",
     "import os\n",
     "from pathlib import Path\n",
-    "from nbdev.export import Config\n",
-    "from sciflow.parse_module import extract_dag\n",
-    "from nbdev.export import find_default_export, read_nb\n",
+    "from typing import Iterable\n",
+    "\n",
+    "from nbdev.export import Config, find_default_export, read_nb\n",
     "from sciflow.params import params_as_dict\n",
-    "from sciflow.parse_module import extract_steps, FuncDetails\n",
-    "from typing import Iterable"
+    "from sciflow.parse_module import FuncDetails, extract_steps"
    ]
   },
   {
@@ -42,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,16 +79,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert(titleize('snake_case') == 'SnakeCase')"
+    "assert titleize(\"snake_case\") == \"SnakeCase\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,43 +111,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "no_steps = extract_steps(os.path.join(Config().path(\"lib_path\"), f\"_nbdev.py\"))\n",
-    "assert(len(no_steps)==0)"
+    "assert len(no_steps) == 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert(['first', 'preprocess', 'train', 'last'] == [step.name for step in steps])\n",
+    "assert [\"first\", \"preprocess\", \"train\", \"last\"] == [step.name for step in steps]\n",
     "rename_steps_for_metaflow(steps)\n",
-    "assert(['start', 'preprocess', 'train', 'end'] == [step.name for step in steps])"
+    "assert [\"start\", \"preprocess\", \"train\", \"end\"] == [step.name for step in steps]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def indent_multiline(multiline_text, indent=1):\n",
-    "    lines = multiline_text.strip().split('\\n')\n",
-    "    spaces = ''.join([\"    \" for _ in range(indent)])\n",
+    "    lines = multiline_text.strip().split(\"\\n\")\n",
+    "    spaces = \"\".join([\"    \" for _ in range(indent)])\n",
     "    for i in range(len(lines)):\n",
     "        prefix = spaces if i > 0 else spaces + '\"\"\"'\n",
     "        lines[i] = prefix + lines[i]\n",
-    "    return '\\n'.join(lines) + '\"\"\"'"
+    "    return \"\\n\".join(lines) + '\"\"\"'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,12 +155,12 @@
     "Some text\n",
     ":param param: text\n",
     "\"\"\"\n",
-    "assert('    \"\"\"Some text\\n    :param param: text\"\"\"' == indent_multiline(text))"
+    "assert '    \"\"\"Some text\\n    :param param: text\"\"\"' == indent_multiline(text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,39 +178,63 @@
     "    params = params_as_dict(nb_path)\n",
     "    flow_class_name = f\"{titleize(module_name)}Flow\"\n",
     "    rename_steps_for_metaflow(steps)\n",
-    "    write_module_to_file(flow_path, flow_class_name, lib_name, module_name, orig_step_names, \n",
-    "                         steps, params)\n",
+    "    write_module_to_file(\n",
+    "        flow_path,\n",
+    "        flow_class_name,\n",
+    "        lib_name,\n",
+    "        module_name,\n",
+    "        orig_step_names,\n",
+    "        steps,\n",
+    "        params,\n",
+    "    )\n",
     "    if not silent:\n",
     "        print(f\"Wrote {flow_class_name} to file: {flow_path}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def write_module_to_file(flow_path: Path, flow_class_name: str, lib_name: str, module_name: str, \n",
-    "                         orig_step_names: Iterable[str], steps: Iterable[FuncDetails], params: dict):\n",
-    "    with open(flow_path, 'w') as flow_file:\n",
+    "def write_module_to_file(\n",
+    "    flow_path: Path,\n",
+    "    flow_class_name: str,\n",
+    "    lib_name: str,\n",
+    "    module_name: str,\n",
+    "    orig_step_names: Iterable[str],\n",
+    "    steps: Iterable[FuncDetails],\n",
+    "    params: dict,\n",
+    "):\n",
+    "    with open(flow_path, \"w\") as flow_file:\n",
     "        flow_file.write(\"# SCIFLOW GENERATED FILE - DO NOT EDIT\\n\")\n",
     "        flow_file.write(\"from metaflow import FlowSpec, step, Parameter\\n\")\n",
-    "        flow_file.write(f\"from {lib_name}.{module_name} import {', '.join(orig_step_names)}\\n\")\n",
-    "        flow_file.write(f\"from {lib_name}.{module_name} import {', '.join(params.keys())}\\n\")\n",
+    "        flow_file.write(\n",
+    "            f\"from {lib_name}.{module_name} import {', '.join(orig_step_names)}\\n\"\n",
+    "        )\n",
+    "        flow_file.write(\n",
+    "            f\"from {lib_name}.{module_name} import {', '.join(params.keys())}\\n\"\n",
+    "        )\n",
     "        flow_file.write(f\"\\n\\nclass {flow_class_name}(FlowSpec):\\n\")\n",
     "        single_indent = \"    \"\n",
     "        for param in params.keys():\n",
-    "            flow_file.write(f\"{single_indent}_{param} = Parameter('{param}', default={param})\\n\")\n",
+    "            flow_file.write(\n",
+    "                f\"{single_indent}_{param} = Parameter('{param}', default={param})\\n\"\n",
+    "            )\n",
     "\n",
     "        flow_file.write(\"\\n\")\n",
     "        for i, step in enumerate(steps):\n",
     "            flow_file.write(f\"{single_indent}@step\\n\")\n",
     "            flow_file.write(f\"{single_indent}def {step.name}(self):\\n\")\n",
     "            flow_file.write(f\"{indent_multiline(step.docstring, 2)}\\n\")\n",
-    "            flow_file.write(f\"{single_indent}{single_indent}{orig_step_names[i]}({step.args})\\n\")\n",
+    "            flow_file.write(\n",
+    "                f\"{single_indent}{single_indent}{orig_step_names[i]}({step.args})\\n\"\n",
+    "            )\n",
     "            if i < len(steps) - 1:\n",
-    "                flow_file.write(f\"{single_indent}{single_indent}self.next(self.{steps[i+1].name})\\n\")\n",
-    "            flow_file.write('\\n')\n",
+    "                flow_file.write(\n",
+    "                    f\"{single_indent}{single_indent}self.next(self.{steps[i+1].name})\\n\"\n",
+    "                )\n",
+    "            flow_file.write(\"\\n\")\n",
     "\n",
     "        flow_file.write('if __name__ == \"__main__\":\\n')\n",
     "        flow_file.write(f\"{single_indent}{flow_class_name}()\")"
@@ -219,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,16 +254,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "flow_path = os.path.join(Path('.').resolve(), \"test\", \"flows\", f\"{get_module_name(nb_path)}.py\")"
+    "flow_path = os.path.join(\n",
+    "    Path(\".\").resolve(), \"test\", \"flows\", f\"{get_module_name(nb_path)}.py\"\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +301,7 @@
     }
    ],
    "source": [
-    "nb_to_metaflow('packaging.ipynb', flow_path, silent=False)"
+    "nb_to_metaflow(\"packaging.ipynb\", flow_path, silent=False)"
    ]
   },
   {
