--- a/nbs/build.ipynb
+++ b/nbs/build.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -43,12 +43,31 @@
    "source": [
     "# Chains\n",
     "\n",
+    "## build\n",
     "* *tidy*\n",
     "* lint\n",
     "* test\n",
     "* coverage\n",
     "* *build_lib*\n",
-    "* **generate_flows**"
+    "* **generate_flows**\n",
+    "\n",
+    "## release\n",
+    "* *tidy*\n",
+    "* lint\n",
+    "* test\n",
+    "* coverage\n",
+    "* *build_lib*\n",
+    "* **generate_flows**\n",
+    "* make release"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## This is make"
    ]
   },
   {
@@ -64,18 +83,6 @@
    "display_name": "Python [conda env:jovyan-discovery]",
    "language": "python",
    "name": "conda-env-jovyan-discovery-py"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.10"
   }
  },
  "nbformat": 4,
