--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -36,22 +36,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`mamba install text_discovery`"
+    "`mamba install sciflow`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How to use"
+    "## How to use\n",
+    "\n",
+    "..."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Concepts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Steps\n",
+    "\n",
+    "Steps are functions which can be executed independently. Structuring your code into steps brigns many benefits:\n",
+    "\n",
+    "* Save Time:\n",
+    "    * Checkpointing: can skip having to run expensive steps again\n",
+    "    * Re-use: write a step once and use in many different workflows"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Flows\n",
+    "\n",
+    "A flow is short for workflow; they help you structure your work into something can be executed from start to finish. Structuring your work into flows has the following benefits:\n",
+    "\n",
+    "* Ordered execution: anyone can run your workflow because the order is defined.\n",
+    "* Portability: writing your research as a flow helps to draw out dependencies on libraries or anything that can run in your environment but not elsewhere."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -66,7 +93,7 @@
     "* nbdev_new     \n",
     "* sciflow_tidy\n",
     "* sciflow_build_lib\n",
-    "* sciflow_package\n",
+    "* sciflow_prepare\n",
     "* sciflow_build\n",
     "* sciflow_release"
    ]
@@ -84,18 +111,6 @@
    "display_name": "Python [conda env:jovyan-discovery]",
    "language": "python",
    "name": "conda-env-jovyan-discovery-py"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.10"
   }
  },
  "nbformat": 4,
