Finished initial flow generation

--- a/nbs/metaflow.ipynb
+++ b/nbs/metaflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,8 @@
     "from pathlib import Path\n",
     "from typing import Iterable\n",
     "\n",
-    "from nbdev.export import Config, find_default_export, read_nb\n",
+    "from fastcore.script import call_parse\n",
+    "from nbdev.export import Config, find_default_export, nbglob, read_nb\n",
     "from sciflow.params import params_as_dict\n",
     "from sciflow.parse_module import FuncDetails, extract_steps"
    ]
@@ -41,23 +42,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,17 +64,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
+    "\n",
+    "\n",
     "def titleize(name):\n",
     "    return name.title().replace(\"_\", \"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,10 +86,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
+    "\n",
+    "\n",
     "def rename_steps_for_metaflow(steps):\n",
     "    for i, step in enumerate(steps):\n",
     "        if i == 0:\n",
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,10 +133,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
+    "\n",
+    "\n",
     "def indent_multiline(multiline_text, indent=1):\n",
     "    lines = multiline_text.strip().split(\"\\n\")\n",
     "    spaces = \"\".join([\"    \" for _ in range(indent)])\n",
@@ -147,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,22 +164,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
+    "\n",
+    "\n",
     "def nb_to_metaflow(nb_path: Path, flow_path: Path, silent=True):\n",
     "    nb = read_nb(nb_path)\n",
     "    lib_name = Config().lib_name\n",
     "    module_name = find_default_export(nb[\"cells\"])\n",
+    "    nb_name = os.path.basename(nb_path)\n",
+    "    if not module_name:\n",
+    "        print(f\"Skipping {nb_name} - no export module\")\n",
+    "        return\n",
     "    exported_module = os.path.join(Config().path(\"lib_path\"), f\"{module_name}.py\")\n",
     "    steps = extract_steps(exported_module)\n",
     "    if len(steps) == 0:\n",
     "        if not silent:\n",
-    "            print(f\"Skipping {nb_path} - no steps found\")\n",
+    "            print(f\"Skipping {nb_name} - no steps\")\n",
     "        return\n",
     "    orig_step_names = [step.name for step in steps]\n",
+    "    if len(steps) == 1:\n",
+    "        steps.append(FuncDetails(\"end\", None, None, False, \"pass\"))\n",
     "    params = params_as_dict(nb_path)\n",
+    "    if len(params) == 0:\n",
+    "        print(f\"No params cell found for: {os.path.basename(nb_path)}\")\n",
     "    flow_class_name = f\"{titleize(module_name)}Flow\"\n",
     "    rename_steps_for_metaflow(steps)\n",
     "    write_module_to_file(\n",
@@ -188,15 +203,38 @@
     "        params,\n",
     "    )\n",
     "    if not silent:\n",
-    "        print(f\"Wrote {flow_class_name} to file: {flow_path}\")"
+    "        print(f\"Wrote {flow_class_name} to: {os.path.basename(flow_path)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'_input_path,_model_path'"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\",\".join([\"_\" + a for a in steps[2].args.split(\",\")])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#  export\n",
+    "\n",
+    "\n",
     "def write_module_to_file(\n",
     "    flow_path: Path,\n",
     "    flow_class_name: str,\n",
@@ -206,6 +244,8 @@
     "    steps: Iterable[FuncDetails],\n",
     "    params: dict,\n",
     "):\n",
+    "    if not os.path.exists(flow_path.parent):\n",
+    "        os.mkdir(flow_path.parent)\n",
     "    with open(flow_path, \"w\") as flow_file:\n",
     "        flow_file.write(\"# SCIFLOW GENERATED FILE - DO NOT EDIT\\n\")\n",
     "        flow_file.write(\"from metaflow import FlowSpec, step, Parameter\\n\")\n",
@@ -219,17 +259,23 @@
     "        single_indent = \"    \"\n",
     "        for param in params.keys():\n",
     "            flow_file.write(\n",
-    "                f\"{single_indent}_{param} = Parameter('{param}', default={param})\\n\"\n",
+    "                f\"{single_indent}{param} = Parameter('{param}', default={param})\\n\"\n",
     "            )\n",
     "\n",
     "        flow_file.write(\"\\n\")\n",
     "        for i, step in enumerate(steps):\n",
     "            flow_file.write(f\"{single_indent}@step\\n\")\n",
     "            flow_file.write(f\"{single_indent}def {step.name}(self):\\n\")\n",
-    "            flow_file.write(f\"{indent_multiline(step.docstring, 2)}\\n\")\n",
-    "            flow_file.write(\n",
-    "                f\"{single_indent}{single_indent}{orig_step_names[i]}({step.args})\\n\"\n",
-    "            )\n",
+    "            if step.docstring:\n",
+    "                flow_file.write(f\"{indent_multiline(step.docstring, 2)}\\n\")\n",
+    "            # Check for padded step\n",
+    "            if i < len(orig_step_names):\n",
+    "                flow_step_args = \",\".join([\"self.\" + a for a in step.args.split(\",\")])\n",
+    "                flow_file.write(\n",
+    "                    f\"{single_indent}{single_indent}{orig_step_names[i]}({flow_step_args})\\n\"\n",
+    "                )\n",
+    "            else:\n",
+    "                flow_file.write(f\"{single_indent}{single_indent}pass\\n\")\n",
     "            if i < len(steps) - 1:\n",
     "                flow_file.write(\n",
     "                    f\"{single_indent}{single_indent}self.next(self.{steps[i+1].name})\\n\"\n",
@@ -242,10 +288,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
+    "\n",
+    "\n",
     "def get_module_name(nb_path):\n",
     "    nb = read_nb(nb_path)\n",
     "    module_name = find_default_export(nb[\"cells\"])\n",
@@ -254,25 +303,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
-    "flow_path = os.path.join(\n",
-    "    Path(\".\").resolve(), \"test\", \"flows\", f\"{get_module_name(nb_path)}.py\"\n",
+    "flow_path = Path(\n",
+    "    os.path.join(Path(\".\").resolve(), \"test\", \"flows\", f\"{get_module_name(nb_path)}.py\")\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Path('/home/jovyan/git/sciflow/nbs/test/flows/test_export.py')"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flow_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wrote TestExportFlow to file: /home/jovyan/git/sciflow/nbs/test/flows/test_export.py\n"
+      "Wrote TestExportFlow to: test_export.py\n"
      ]
     }
    ],
@@ -289,14 +358,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Skipping packaging.ipynb - no steps found\n"
+      "Skipping packaging.ipynb - no steps\n"
      ]
     }
    ],
@@ -305,13 +374,70 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 159,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# TODO\n",
+    "# export\n",
     "\n",
-    "* Add recursive option to nb_to_metaflow"
+    "\n",
+    "def generate_flows(config: Config):\n",
+    "    flows_dir = config.path(\"flows_path\")\n",
+    "    nb_paths = nbglob(recursive=True)\n",
+    "    for nb_path in nb_paths:\n",
+    "        flow_module_name = os.path.basename(nb_path).replace(\"ipynb\", \"py\")\n",
+    "        nb_to_metaflow(\n",
+    "            nb_path, Path(os.path.join(flows_dir, flow_module_name)), silent=False\n",
+    "        )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skipping metaflow.ipynb - no steps\n",
+      "Skipping build.ipynb - no steps\n",
+      "Skipping parse_module.ipynb - no steps\n",
+      "Skipping scilint.ipynb - no steps\n",
+      "Skipping export_named.ipynb - no steps\n",
+      "Skipping packaging.ipynb - no steps\n",
+      "Skipping params.ipynb - no steps\n",
+      "Skipping index.ipynb - no export module\n",
+      "Wrote TestExportFlow to: test_export.py\n",
+      "Wrote TestModuleFlow to: test_module.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "generate_flows(Config(cfg_name=\"test/settings.ini\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "@call_parse\n",
+    "def sciflow_generate():\n",
+    "    generate_flows(Config())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
