--- a/nbs/test/test_module.ipynb
+++ b/nbs/test/test_module.ipynb
@@ -12,16 +12,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "some_param = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# exportn_step:first\n",
-    "from typing import List\n",
     "\n",
     "\n",
-    "def first(some_params: List[str]):\n",
-    "    print(\"\".join(some_params))\n",
-    "    return len(some_params)"
+    "def first(some_param: int):\n",
+    "    print(some_param)\n",
+    "    return some_param"
    ]
   },
   {
@@ -105,6 +119,18 @@
    "display_name": "Python [conda env:jovyan-discovery]",
    "language": "python",
    "name": "conda-env-jovyan-discovery-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
