Moved experiments & added test dvc file

--- a/nbs/metaflow.ipynb
+++ b/nbs/metaflow.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,13 +177,10 @@
     "    module_name = find_default_export(nb[\"cells\"])\n",
     "    nb_name = os.path.basename(nb_path)\n",
     "    if not module_name:\n",
-    "        print(f\"Skipping {nb_name} - no export module\")\n",
     "        return\n",
     "    exported_module = os.path.join(Config().path(\"lib_path\"), f\"{module_name}.py\")\n",
     "    steps = extract_steps(exported_module)\n",
     "    if len(steps) == 0:\n",
-    "        if not silent:\n",
-    "            print(f\"Skipping {nb_name} - no steps\")\n",
     "        return\n",
     "    orig_step_names = [step.name for step in steps]\n",
     "    if len(steps) == 1:\n",
@@ -203,32 +200,12 @@
     "        params,\n",
     "    )\n",
     "    if not silent:\n",
-    "        print(f\"Wrote {flow_class_name} to: {os.path.basename(flow_path)}\")"
+    "        print(f\"Converted {nb_name} to {flow_class_name} in: {os.path.basename(flow_path)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'_input_path,_model_path'"
-      ]
-     },
-     "execution_count": 169,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\",\".join([\"_\" + a for a in steps[2].args.split(\",\")])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +300,7 @@
        "Path('/home/jovyan/git/sciflow/nbs/test/flows/test_export.py')"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,14 +311,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wrote TestExportFlow to: test_export.py\n"
+      "Converted test_export.ipynb to TestExportFlow in: test_export.py\n"
      ]
     }
    ],
@@ -358,24 +335,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Skipping packaging.ipynb - no steps\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "nb_to_metaflow(\"packaging.ipynb\", flow_path, silent=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,23 +363,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Skipping metaflow.ipynb - no steps\n",
-      "Skipping build.ipynb - no steps\n",
-      "Skipping parse_module.ipynb - no steps\n",
-      "Skipping scilint.ipynb - no steps\n",
-      "Skipping export_named.ipynb - no steps\n",
-      "Skipping packaging.ipynb - no steps\n",
-      "Skipping params.ipynb - no steps\n",
-      "Skipping index.ipynb - no export module\n",
-      "Wrote TestExportFlow to: test_export.py\n",
-      "Wrote TestModuleFlow to: test_module.py\n"
+      "Converted test_export.ipynb to TestExportFlow in: test_export.py\n",
+      "Converted test_module.ipynb to TestModuleFlow in: test_module.py\n"
      ]
     }
    ],
@@ -420,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
