Refactored test modules. Added flow check and headless dremio access

--- a/examples/top2vec.ipynb
+++ b/examples/top2vec.ipynb
@@ -303,7 +303,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# exportn_step:fit\n",
+    "\n",
     "def fit(documents, workers=8, speed=\"fast-learn\"):\n",
     "    return Top2Vec(documents, workers=workers, speed=speed)"
    ]
