--- a/nbs/test/test_module.ipynb
+++ b/nbs/test/test_module.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# default_exp test_module"
+    "# default_exp test.test_module"
    ]
   },
   {
