--- a/nbs/metaflow.ipynb
+++ b/nbs/metaflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,6 +19,7 @@
     "import os\n",
     "from pathlib import Path\n",
     "from typing import Iterable\n",
+    "import subprocess\n",
     "\n",
     "from fastcore.script import call_parse\n",
     "from nbdev.export import Config, find_default_export, nbglob, read_nb\n",
@@ -42,9 +43,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -52,19 +62,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "nb_path = Path(os.path.join(\"test\", \"test_export.ipynb\"))\n",
     "nb = read_nb(nb_path)\n",
-    "module_name = find_default_export(nb[\"cells\"])\n",
+    "module_name = find_default_export(nb[\"cells\"]).replace('.', '/')\n",
     "test_module = os.path.join(Config().path(\"lib_path\"), f\"{module_name}.py\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,12 +182,14 @@
     "\n",
     "\n",
     "def nb_to_metaflow(nb_path: Path, flow_path: Path, silent=True):\n",
+    "    print(nb_path)\n",
     "    nb = read_nb(nb_path)\n",
     "    lib_name = Config().lib_name\n",
     "    module_name = find_default_export(nb[\"cells\"])\n",
-    "    nb_name = os.path.basename(nb_path)\n",
     "    if not module_name:\n",
     "        return\n",
+    "    module_name = module_name.replace('.', '/')\n",
+    "    nb_name = os.path.basename(nb_path)\n",
     "    exported_module = os.path.join(Config().path(\"lib_path\"), f\"{module_name}.py\")\n",
     "    steps = extract_steps(exported_module)\n",
     "    if len(steps) == 0:\n",
@@ -205,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,16 +303,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Path('/home/jovyan/git/sciflow/nbs/test/flows/test_export.py')"
+       "Path('/home/jovyan/git/sciflow/nbs/test/flows/test.test_export.py')"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,14 +323,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converted test_export.ipynb to TestExportFlow in: test_export.py\n"
+      "test/test_export.ipynb\n",
+      "Converted test_export.ipynb to Test/TestExportFlow in: test.test_export.py\n"
      ]
     }
    ],
@@ -335,16 +348,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "packaging.ipynb\n"
+     ]
+    }
+   ],
    "source": [
     "nb_to_metaflow(\"packaging.ipynb\", flow_path, silent=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,15 +384,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converted test_export.ipynb to TestExportFlow in: test_export.py\n",
-      "Converted test_module.ipynb to TestModuleFlow in: test_module.py\n"
+      "/home/jovyan/git/sciflow/nbs/metaflow.ipynb\n",
+      "/home/jovyan/git/sciflow/nbs/build.ipynb\n",
+      "/home/jovyan/git/sciflow/nbs/utils.ipynb\n",
+      "/home/jovyan/git/sciflow/nbs/parse_module.ipynb\n",
+      "/home/jovyan/git/sciflow/nbs/scilint.ipynb\n",
+      "/home/jovyan/git/sciflow/nbs/export_named.ipynb\n",
+      "/home/jovyan/git/sciflow/nbs/packaging.ipynb\n",
+      "/home/jovyan/git/sciflow/nbs/params.ipynb\n",
+      "/home/jovyan/git/sciflow/nbs/index.ipynb\n",
+      "/home/jovyan/git/sciflow/nbs/data_handlers.ipynb\n",
+      "/home/jovyan/git/sciflow/nbs/test/test_export.ipynb\n",
+      "Converted test_export.ipynb to Test/TestExportFlow in: test_export.py\n",
+      "/home/jovyan/git/sciflow/nbs/test/test_pandas_numpy.ipynb\n",
+      "Converted test_pandas_numpy.ipynb to Test/TestPandasNumpyFlow in: test_pandas_numpy.py\n",
+      "/home/jovyan/git/sciflow/nbs/test/test_top2vec.ipynb\n",
+      "Converted test_top2vec.ipynb to Test/TestTop2VecFlow in: test_top2vec.py\n",
+      "/home/jovyan/git/sciflow/nbs/test/test_module.ipynb\n",
+      "Converted test_module.ipynb to Test/TestModuleFlow in: test_module.py\n"
      ]
     }
    ],
@@ -381,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,6 +428,79 @@
     "@call_parse\n",
     "def sciflow_generate():\n",
     "    generate_flows(Config())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_flows(config):\n",
+    "    flow_results = {}\n",
+    "    flows_dir = config.path('flows_path')\n",
+    "    for flow_path in os.listdir(flows_dir):\n",
+    "        flow_name = os.path.basename(flow_path)\n",
+    "        if flow_path.endswith('.py'):\n",
+    "            ret_code, output = check_flow(flows_dir, flow_path)\n",
+    "            flow_results[flow_name] = ret_code, output\n",
+    "            if ret_code == 0:\n",
+    "                print(f'Flow: {flow_name} verified')\n",
+    "            else:\n",
+    "                print(f'Flow: {flow_name} verification failed\\nDetails:\\n{output}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_flow(flows_dir, flow_module):\n",
+    "    script = f\"python '{os.path.join(flows_dir, flow_module)}' show\"\n",
+    "    pipe = subprocess.Popen(\"%s\" % script, stdout=subprocess.PIPE, stderr=subprocess.STDOUT, shell=True)\n",
+    "    output = pipe.communicate()[0]\n",
+    "    return pipe.returncode, output.decode('utf-8').strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Flow: test_module.py verification failed\n",
+      "Details:\n",
+      "File \"/home/jovyan/git/sciflow/nbs/test/flows/test_module.py\", line 3\n",
+      "    from sciflow.test/test_module import first\n",
+      "                     ^\n",
+      "SyntaxError: invalid syntax\n",
+      "Flow: test_top2vec.py verification failed\n",
+      "Details:\n",
+      "File \"/home/jovyan/git/sciflow/nbs/test/flows/test_top2vec.py\", line 3\n",
+      "    from sciflow.test/test_top2vec import something, preprocess, fit, evaluate\n",
+      "                     ^\n",
+      "SyntaxError: invalid syntax\n",
+      "Flow: test_pandas_numpy.py verification failed\n",
+      "Details:\n",
+      "File \"/home/jovyan/git/sciflow/nbs/test/flows/test_pandas_numpy.py\", line 3\n",
+      "    from sciflow.test/test_pandas_numpy import first, preprocess, train, last\n",
+      "                     ^\n",
+      "SyntaxError: invalid syntax\n",
+      "Flow: test_export.py verification failed\n",
+      "Details:\n",
+      "File \"/home/jovyan/git/sciflow/nbs/test/flows/test_export.py\", line 3\n",
+      "    from sciflow.test/test_export import first, preprocess, train, last\n",
+      "                     ^\n",
+      "SyntaxError: invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "check_flows(Config(cfg_name=\"test/settings.ini\"))"
    ]
   },
   {
